4.x: Upgrades Narayana to version 7.0.0.Final (#7662)
* Upgrades Narayana to version 7.0.0.Final

Signed-off-by: Laird Nelson <laird.nelson@oracle.com>

* Squashable commit; removes inadvertently commented-out pom.xml content

Signed-off-by: Laird Nelson <laird.nelson@oracle.com>

* Squashable commit; deletes now unnecessary verison.lib.jboss.transaction-spi property in dependencies/pom.xml

Signed-off-by: Laird Nelson <laird.nelson@oracle.com>

---------

Signed-off-by: Laird Nelson <laird.nelson@oracle.com>